<resources>

    <string name="app_name">Happybuh</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Happy Buh</string>
    <string name="title_activity_habitacion">Habitacion</string>
    <string name="user_name_hint">Happybuh (Max 10)</string>
    <string name="user_name_change">Cambiar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="descripcion"><h1>HAPPYBUH Help Menu</h1></string>
    <string name="title_activity_armario">Armario</string>
    <string name="title_activity_change_color">ChangeColor</string>
    <string name="title_activity_change_glasses">ChangeGlasses</string>
    <string name="title_activity_new__user">New_User</string>
    <string name="summit">&lt;bold&gt;summit&lt;/bold&gt;</string>
    <string name="reques">No puedes comprar este Color: \n Nivel muy bajo o coins insuficientes</string>
    <string name="new_user">Introduce tu nombre de usuario: \n MINIMO 5 LETRAS \n MAXIMO 10 LETRAS</string>
    <string name="title_activity_change_beard">ChangeBeard</string>
    <string name="title_activity_juego">Juego</string>
    <string name="t_info1">jdjskjdqwjdpqjwdpojwpqwjdpoqjwdqpwdjpqowjdpoqjwdpojqwpdjpo\n wiehfwhefowhefoihweofhowhefohwoehfoiwehifhwoefhwoefh
        \n woewoefowhiefowhefhwiefhih
        \n wfweofwejfwjepfjwepfjpowjefpjwepfjpwejpowejpfjwefjwepfjpwejpow
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw </string>
    <string name="t_info2">jdjskjdqwjdpqjwdpojwpqwjdpoqjwdqpwdjpqowjdpoqjwdpojqwpdjpo\n wiehfwhefowhefoihweofhowhefohwoehfoiwehifhwoefhwoefh
        \n woewoefowhiefowhefhwiefhih
        \n wfweofwejfwjepfjwepfjpowjefpjwepfjpwejpowejpfjwefjwepfjpwejpow
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw </string>
    <string name="t_info3">jdjskjdqwjdpqjwdpojwpqwjdpoqjwdqpwdjpqowjdpoqjwdpojqwpdjpo\n wiehfwhefowhefoihweofhowhefohwoehfoiwehifhwoefhwoefh
        \n woewoefowhiefowhefhwiefhih
        \n wfweofwejfwjepfjwepfjpowjefpjwepfjpwejpowejpfjwefjwepfjpwejpow
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw
        \n wofjiwejfjwpejpowjefojwpefjpwoejfojwepfjpwjepfowejfpowjpfojwfjw </string>
    <string name="title_activity_bubble_game">BubbleGame</string>
    <string name="texto_gameover">Buuh...has perdido, pero: \n</string>
    <string name="juego_pausado">Juego pausado \n ¿Qué deseas hacer?</string>
    <string name="title_activity_jump_game">JumpGame</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_world_game">WorldGame</string>
    <string name="fin_worldgame">¡¡FELICIDADES!! \n Tu tiempo ha sido de: </string>

</resources>