<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:id="@+id/Relativelayout02">
    
    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:gravity="center_horizontal">
 
    <ViewFlipper
        android:id="@+id/viewFlipper2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
 <!-- HABITACION -->       
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" 
		    android:background="@drawable/juego1">
		                
			<ImageButton 
			    android:id="@+id/inicio_juego1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/room_izq"
			    android:onClick="inicio_juego1"
			    android:background="@android:color/transparent"
			    android:layout_centerInParent="true"/>
		    
			<ImageButton 
			    android:id="@+id/inicio_help1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/help_der"
			    android:onClick="inicio_help1"
			    android:layout_below="@id/inicio_juego1"
			    android:background="@android:color/transparent"
			    android:layout_alignLeft="@id/inicio_juego1"/>
			
			<ImageView 
			    android:id="@+id/info_juego1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/info"
			    android:visibility="invisible"
			    android:layout_centerInParent="true"/>
			
			
			<ScrollView 
		      android:id="@+id/scroll_info1" 
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_alignTop="@id/info_juego1"
			  android:layout_alignLeft="@id/info_juego1"
			  android:layout_alignBottom="@id/info_juego1"
			  android:layout_alignRight="@id/info_juego1"
			  android:layout_marginTop="30dp"
			  android:layout_marginLeft="15dp"
			  android:layout_marginRight="15dp"
			  android:layout_marginBottom="20dp"
			  android:visibility="invisible"
			  >
				<RelativeLayout 
				    android:id="@+id/RelativeLayout_info"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent">
				    
				    
				    <TextView 
						android:id="@+id/texto_info1"
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:text="@string/t_info1"
				    	android:layout_alignParentTop="true"
				    	android:textColor="@android:color/white"/>
				</RelativeLayout>
			</ScrollView>
			
			<ImageButton 
			    android:id="@+id/cerrar_info_juego1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/cerrar_info"
			    android:onClick="cerrar_info_juego1"
			    android:background="@android:color/transparent"
			    android:layout_alignTop="@id/info_juego1"
			    android:layout_alignRight="@id/info_juego1"
			    android:visibility="invisible"/>
		</RelativeLayout>
        
<!-- JUEGO 2 -->
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" 
		    android:background="@drawable/juego2">
		    
		    <ImageButton 
			    android:id="@+id/inicio_juego2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/room_izq"
			    android:onClick="inicio_juego2"
			    android:background="@android:color/transparent"
			    android:layout_centerInParent="true"/>
		    
			<ImageButton 
			    android:id="@+id/inicio_help2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/help_der"
			    android:onClick="inicio_help2"
			    android:layout_below="@id/inicio_juego2"
			    android:background="@android:color/transparent"
			    android:layout_alignLeft="@id/inicio_juego2"/>
			
			<ImageView 
			    android:id="@+id/info_juego2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/info"
			    android:visibility="invisible"
			    android:layout_centerInParent="true"/>
			
			
			<ScrollView 
		      android:id="@+id/scroll_info2" 
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_alignTop="@id/info_juego2"
			  android:layout_alignLeft="@id/info_juego2"
			  android:layout_alignBottom="@id/info_juego2"
			  android:layout_alignRight="@id/info_juego2"
			  android:layout_marginTop="30dp"
			  android:layout_marginLeft="15dp"
			  android:layout_marginRight="15dp"
			  android:layout_marginBottom="20dp"
			  android:visibility="invisible"
			  >
				<RelativeLayout 
				    android:id="@+id/RelativeLayout_info"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent">
				    
				    <TextView 
						android:id="@+id/texto_info2"
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:text="@string/t_info2"
				    	android:layout_alignParentTop="true"
				    	android:textColor="@android:color/white"/>
				</RelativeLayout>
			</ScrollView>
			
			<ImageButton 
			    android:id="@+id/cerrar_info_juego2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/cerrar_info"
			    android:onClick="cerrar_info_juego2"
			    android:background="@android:color/transparent"
			    android:layout_alignTop="@id/info_juego2"
			    android:layout_alignRight="@id/info_juego2"
			    android:visibility="invisible"/>
		   
		    
		</RelativeLayout>
 <!-- JUEGO 3 -->       
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" 
		    android:background="@drawable/juego2">
		    
			<ImageButton 
			    android:id="@+id/inicio_juego3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/room_izq"
			    android:onClick="inicio_juego3"
			    android:background="@android:color/transparent"
			    android:layout_centerInParent="true"/>
		    
			<ImageButton 
			    android:id="@+id/inicio_help3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/help_der"
			    android:onClick="inicio_help3"
			    android:layout_below="@id/inicio_juego3"
			    android:background="@android:color/transparent"
			    android:layout_alignLeft="@id/inicio_juego3"/>
			
			<ImageView 
			    android:id="@+id/info_juego3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/info"
			    android:visibility="invisible"
			    android:layout_centerInParent="true"/>
			
			
			<ScrollView 
		      android:id="@+id/scroll_info3" 
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_alignTop="@id/info_juego3"
			  android:layout_alignLeft="@id/info_juego3"
			  android:layout_alignBottom="@id/info_juego3"
			  android:layout_alignRight="@id/info_juego3"
			  android:layout_marginTop="30dp"
			  android:layout_marginLeft="15dp"
			  android:layout_marginRight="15dp"
			  android:layout_marginBottom="20dp"
			  android:visibility="invisible"
			  >
				<RelativeLayout 
				    android:id="@+id/RelativeLayout_info"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent">
				    
				    <TextView 
						android:id="@+id/texto_info3"
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:text="@string/t_info3"
				    	android:layout_alignParentTop="true"
				    	android:textColor="@android:color/white"/>
				</RelativeLayout>
			</ScrollView>
			
			<ImageButton 
			    android:id="@+id/cerrar_info_juego3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/cerrar_info"
			    android:onClick="cerrar_info_juego3"
			    android:background="@android:color/transparent"
			    android:layout_alignTop="@id/info_juego3"
			    android:layout_alignRight="@id/info_juego3"
			    android:visibility="invisible"/>
					            
		</RelativeLayout>
    </ViewFlipper>
    
    </LinearLayout>

</RelativeLayout>
